asg/tests/pass/integers/u128/min.leo
function main() {
    const a: u128 = 0;
}